Add update operation

--- a/src/CalculationFields/cwTemplateCalculationFields.less
+++ b/src/CalculationFields/cwTemplateCalculationFields.less
@@ -128,7 +128,7 @@
                             }
                         }
                         a.btn-remove-filter:hover{
-                            background-color: lighten(@cwColor2, 10%);
+                            background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
                             border-color: @cwColor1Shade;
                             i{
                                 color:@cwButtonIconColor;
