--- a/src/Styles/cwTemplate.css
+++ b/src/Styles/cwTemplate.css
@@ -1,3 +1,29 @@
+/* GLOBAL */
+/* LOGIN */
+/* DIAGRAM */
+/* HOME PAGE */
+/* MENU LEFT */
+/* MAIN MENU */
+/* SUB MENU */
+/* PAGE TAB */
+/* DROPDOWN NOTIFICATIONS */
+/* SOCIAL */
+/* LIST BOX */
+/* PROPERTIES GROUP */
+/* BUTTONS */
+/* PAGE ACTIONS */
+/* ACCORDIONS */
+/* DISCUSSIONS */
+/* WORLD MAP */
+/* USER ZONE */
+/* POPUP */
+/* BADGES */
+/* TASKS & NOTIFICATIONS */
+/* GLOBAL SEARCH */
+/* TOP BAR */
+/* GRID */
+/* DIAGRAM TILE */
+/* MATRIX ADVANCED */
 .cwLayoutConfigEditor {
   /* Style the tab content */
 }
@@ -98,15 +124,16 @@
   text-align: center;
   vertical-align: middle;
   /*input[type="checkbox"]{
-                                margin: 0px;
-                            }*/
+                        margin: 0px;
+                    }*/
 }
-
-.cwLayoutConfigEditor .largeCell {
+.cwLayoutConfigEditor div.row div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-largeCell {
+  display: inline-block;
+  margin: 5px;
   width: 500px;
+  text-align: center;
+  vertical-align: middle;
 }
-
-
 .cwLayoutConfigEditor div.row div.row-cell-value.row-cell-max-width div.filter-content {
   border-bottom: 1px solid #cccccc;
 }
@@ -115,7 +142,7 @@
   font-weight: bold;
 }
 .cwLayoutConfigEditor div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter {
-  color: #78909C;
+  color: #03a0ce;
   border-radius: 20px;
   width: 36px;
   height: 36px;
@@ -126,37 +153,34 @@
   padding: 0px;
 }
 .cwLayoutConfigEditor div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i {
-  color: #78909C;
+  color: #03a0ce;
 }
 .cwLayoutConfigEditor div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
-  background-color: #00c9b6;
-  border-color: #546E7A;
+  background-color: #03b4e7;
+  border-color: #546e7a;
 }
 .cwLayoutConfigEditor div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i {
-  color: white;
+  color: #03a0ce;
 }
 .cwLayoutConfigEditor div.row div.add-filter-button a.btn-add-filter {
   height: auto;
   width: auto;
   margin: 5px;
-  color: white;
+  color: #03a0ce;
 }
-
 .cwLayoutConfigEditor div.propertieslist {
-        display: flex;
-        flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
-.cwLayoutConfigEditor a.selected{
-  background-color: #00c9b6;
-  border-color: #546E7A;
+.cwLayoutConfigEditor a.selected {
+  background-color: #03b4e7;
+  border-color: #546e7a;
 }
-
-
 .cwLayoutConfigEditor div.add-first-operation-button a.btn-add-first-operation {
   height: auto;
   width: auto;
   margin: 5px;
-  color: white;
+  color: #03a0ce;
   border-radius: 5px;
   padding-left: 5px;
   padding-right: 5px;
