--- a/src/Styles/cwTemplate.less
+++ b/src/Styles/cwTemplate.less
@@ -2,176 +2,186 @@
 @import "../../_variables";
 
 .cwLayoutConfigEditor {
-    .tabs {
-        overflow: hidden;
-        border: 1px solid #ccc;
-        background-color: @cwDiagramEditorMenuBackgroundColor;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        /* Style the buttons inside the tab */
-        .tab-link{
-            background-color: inherit;
-            float: left;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            padding: 14px 16px;
-            transition: 0.3s;
-            font-size: 17px;        
-        }
-        /* Change background color of buttons on hover */
-        .tab-link:hover {
-            background-color: darken(@cwDiagramEditorMenuBackgroundColor, 10%);
-        }
-        /* Create an active/current tablink class */
-        .tab-link.active {
-            background-color: #ccc;
-        }
-        .add-tab-link{
-            float: right;
-            padding: 6px;
-        }
+  .tabs {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: @cwDiagramEditorMenuBackgroundColor;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    /* Style the buttons inside the tab */
+    .tab-link {
+      background-color: inherit;
+      float: left;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 14px 16px;
+      transition: 0.3s;
+      font-size: 17px;
     }
+    /* Change background color of buttons on hover */
+    .tab-link:hover {
+      background-color: darken(@cwDiagramEditorMenuBackgroundColor, 10%);
+    }
+    /* Create an active/current tablink class */
+    .tab-link.active {
+      background-color: #ccc;
+    }
+    .add-tab-link {
+      float: right;
+      padding: 6px;
+    }
+  }
 
-    /* Style the tab content */
-    .tabContent {
-        padding: 6px 12px;
-        border: 1px solid #ccc;
-        border-top: none;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        .remove-operation{
-            float: right;
-        }
+  /* Style the tab content */
+  .tabContent {
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    .remove-operation {
+      float: right;
     }
-	div.row{
-        display:block;
-        margin: 5px 0px;
-        div.row-cell{
-            display: inline-block;
+  }
+  div.row {
+    display: block;
+    margin: 5px 0px;
+    div.row-cell {
+      display: inline-block;
+    }
+    div.row-cell-label {
+      width: 100px;
+      vertical-align: top;
+    }
+    div.row-cell-value-textarea {
+      width: 80%;
+    }
+    div.row-cell-value {
+      select,
+      input,
+      textarea {
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border: 1px solid #cccccc;
+        padding: 0px 5px;
+      }
+      select,
+      input {
+        height: 30px;
+      }
+      textarea {
+        min-height: 30px;
+        resize: vertical;
+      }
+    }
+    div.row-cell-value.row-cell-max-width {
+      width: 85%;
+      div.cell-content-wrapper {
+        width: 100%;
+        border: 1px solid #cccccc;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        padding: 0px 5px;
+      }
+      div.properties-wrapper {
+        overflow: auto;
+        max-height: 350px;
+        input {
+          vertical-align: middle;
+          margin-right: 5px;
         }
-        div.row-cell-label{
-            width:100px;
-            vertical-align: top;
-            
-        }
-        div.row-cell-value-textarea{
-            width: 80%;
-        }
-        div.row-cell-value{
-            select, input, textarea {
-                border-radius: 4px;
-                -webkit-border-radius: 4px;
-                -moz-border-radius: 4px;
-                border: 1px solid #cccccc;
-                padding: 0px 5px;
-            }
-            select, input{
-                height: 30px;
-            }
-            textarea{
-                min-height: 30px;
-                resize: vertical;
-            }
-        }
-        div.row-cell-value.row-cell-max-width{
-            width: 85%;
-            div.cell-content-wrapper{
-                width: 100%;
-                border: 1px solid #cccccc;
-                -webkit-border-radius: 4px;
-                -moz-border-radius: 4px;
-                border-radius: 4px;
-                padding: 0px 5px;
-            }
-            div.properties-wrapper{
-                overflow: auto;
-                max-height: 350px;
-                input{
-                    vertical-align: middle;
-                    margin-right: 5px;
-                }
-            }
-            div.filter-wrapper{
-                div.filter-cell{
-                    display: inline-block;
-                    margin: 5px;
-                    width: 180px;
-                    text-align: center;
-                    vertical-align: middle;
-                    /*input[type="checkbox"]{
+      }
+      div.filter-wrapper {
+        div.filter-cell {
+          display: inline-block;
+          margin: 5px;
+          width: 180px;
+          text-align: center;
+          vertical-align: middle;
+          /*input[type="checkbox"]{
                         margin: 0px;
                     }*/
-                }
-                div.filter-largeCell{
-                    display: inline-block;
-                    margin: 5px;
-                    width: 500px;
-                    text-align: center;
-                    vertical-align: middle;
-                }
-            }
-            div.filter-content{
-                border-bottom:1px solid #cccccc;
-            }
-            div.header-cell{
-                text-align: center;
-                font-weight: bold;
-            }
-            div.remove-filter-button {
-                a.btn-remove-filter{
-                    color: @cwColor1;
-                    border-radius: 20px;
-                    width: 36px;
-                    height: 36px;
-                    line-height: 34px;
-                    border: 1px solid transparent;
-                    background-color: transparent;
-                    box-shadow: none;
-                    padding: 0px;
-                    i{
-                        color: @cwColor1;
-                    }
-                }
-                a.btn-remove-filter:hover{
-                    background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
-                    border-color: @cwColor1Shade;
-                    i{
-                        color:@cwButtonIconColor;
-                    }
-                }
-            }
         }
-        div.add-filter-button{
-            a.btn-add-filter{
-                height: auto;
-                width: auto;
-                margin: 5px;
-                color:@cwButtonIconColor;
-            }
+        div.filter-largeCell {
+          display: inline-block;
+          margin: 5px;
+          width: 500px;
+          text-align: center;
+          vertical-align: middle;
         }
-    }
+      }
+      div.filter-content {
+        border-bottom: 1px solid #cccccc;
+      }
+      div.header-cell {
+        text-align: center;
+        font-weight: bold;
+      }
+      div.remove-filter-button {
+        a.btn-remove-filter {
+          color: @cwColor1;
+          border-radius: 20px;
+          width: 36px;
+          height: 36px;
+          line-height: 34px;
+          border: 1px solid transparent;
+          background-color: transparent;
+          box-shadow: none;
+          padding: 0px;
+          i {
+            color: @cwPageActionButtonBackgroundColor;
+          }
+        }
 
-    div.propertieslist {
-        display: flex;
-        flex-wrap: wrap;
- 
-    }
-
-   a.selected{
-        background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
-        border-color: @cwColor1Shade;
-    }
-        
-    div.add-first-operation-button{
-        a.btn-add-first-operation{
-            height: auto;
-            width: auto;
-            margin: 5px;
-            color: @cwButtonIconColor;
-            border-radius: 5px;
-            padding-left: 5px;
-            padding-right: 5px;
+        a.btn-remove-filter:hover {
+          background-color: lighten(@cwPageActionButtonBackgroundColor, 5%);
+          border-color: @cwPageActionButtonBorderColor;
+          i {
+            color: @cwPageActionButtonIconColor;
+          }
         }
+      }
     }
+    div.add-filter-button {
+      a.btn-add-filter {
+        height: auto;
+        width: auto;
+        margin: 5px;
+        color: @cwPageActionButtonIconColor;
+        background-color: @cwPageActionButtonBackgroundColor;
+      }
+    }
+  }
+
+  div.propertieslist {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  a.unselected {
+    color: @cwPageActionButtonIconColor!important;
+    background-color: @cwColor1Shade !important;
+  }
+
+  a.selected {
+    color: @cwPageActionButtonIconColor;
+    background-color: @cwPageActionButtonBackgroundColor;
+  }
+
+  div.add-first-operation-button {
+    a.btn-add-first-operation {
+      height: auto;
+      width: auto;
+      margin: 5px;
+      color: @cwPageActionButtonIconColor;
+      background-color: @cwPageActionButtonBackgroundColor;
+
+      border-radius: 5px;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
 }
